--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
