--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   flutter_secure_storage: ^9.2.4
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
